--- a/week4/css/style.css
+++ b/week4/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #979996;
+  background-color: #00949448;
   font-size: 1em;
   margin: 0px;
   padding: 0.5rem;
@@ -18,9 +18,6 @@ footer {
   font-size: 1rem;
   color: #011627;
   list-style-type: none;
-}
-
-header {
 }
 
 ul {
