--- a/css/positioning.css
+++ b/css/positioning.css
@@ -159,7 +159,7 @@
   /*height: 300px; changed this*/
   background-color: gold;
   padding: 15px 0px 15px 15px; /*added this*/
-  font-size: 1vw; /*added this*/
+  font-size: 12; /*added this*/
 }
 .blue5 {
   width: 600px; /*changed this*/
