--- a/css/positioning.css
+++ b/css/positioning.css
@@ -138,7 +138,7 @@
 /* Activity 5 Styles */
 .content5 {
   /* Activity Five Container */
-  height: 600px; /*changed this*/
+  /* height: 600px; changed this */
   justify-self: start; /*added this*/
 }
 .red5 {
@@ -155,11 +155,11 @@
   margin-bottom: 10px; /*added this*/
 }
 .yellow5 {
-  width: 585px; /*changed this*/
+  /* width: 585px; changed this */
   /*height: 300px; changed this*/
   background-color: gold;
   padding: 15px 0px 15px 15px; /*added this*/
-  font-size: 10pt; /*added this*/
+  /* font-size: 10pt; added this */
 }
 .blue5 {
   width: 600px; /*changed this*/
