--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -4,7 +4,6 @@ body {
   line-height: normal;
   margin: 0px;
   padding: 0px;
-  /* width: 960px; */
   box-sizing: border-box;
 }
 
@@ -58,11 +57,12 @@ main {
 
 .top_banner {
   grid-column: 1/3;
-  grid-row: 1/2;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   position: relative;
-  width: 100%;
+  width: auto;
+  align-items: center;
+  justify-items: center;
+  
 }
 
 .hero_image {
@@ -70,7 +70,22 @@ main {
   height: auto;
   grid-column: 1/3;
   grid-row: 1/2;
+  z-index: -2;
+}
+
+.hero_text{
+  position: absolute;
+  bottom: 98px;
+  left: 16px;
+  color:#f5f4f4;
   z-index: -1;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 1.25rem;
+  grid-column: 1/2;
+  background-color: #434656d2;
+  backdrop-filter: blur(8px);
+  border: 0px;
+  border-radius: 12px;
 }
 
 button {
@@ -78,19 +93,15 @@ button {
   height: auto;
   font-size: 2.5em;
   text-align: center;
-  color: #f4f4f5;
+  color: #f5f4f4;
   border: 0px;
   border-radius: 12px;
   font-family: "IM Fell English SC", serif, Impact, Haettenschweiler,
     "Arial Narrow Bold", sans-serif;
-  /* float: left; */
-  /*align-self: center; vertical centering*/
-  /*justify-self: center; horizontal centering*/
-  /* grid-column: 1/3;
-  grid-row: 1/2; */
+  
+  grid-column: 1/3;
+  grid-row: 1/2; 
   position: absolute;
-  top: 120px;
-  left: 395px;
   background-color: #43465681;
 }
 
@@ -105,13 +116,67 @@ h2 {
   text-align: center;
 }
 
-p {
+p , .call_us , .learn_more, .address_box {
   font-size: 1.2rem;
   line-height: normal;
   color: #434656;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   margin-top: 0px;
   padding-top: 0px;
+}
+
+.contact_boxes{
+  display: grid;
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+  grid-column: 1/3;
+  text-align: center;
+  
+  
+}
+
+.call_us, .learn_more,.address_box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #434656;
+  position: relative;
+  background-color: #ffc864;
+  justify-items: center;
+  margin-left: 25px;
+  margin-right: 25px;
+  top: -110px;
+  padding: 24px 30px;
+}
+
+.address_box{
+  border-style: none;
+}
+.contact_icons{
+  height: 50px;
+  width: 50px;
+  margin-bottom: 24px;
+}
+
+.l1_contact{ 
+  font-size: x-large;
+  font-weight: bolder;
+  margin-bottom: 12px;
+}
+.l2_contact{
+  font-size: x-small;
+  margin-bottom: 12px;
+}
+.l3_contact{
+  font-weight: bolder;
+  margin-bottom: 12px;
+}
+
+.address_box {
+  grid-column: 1/3;
+  background-color: #f4f4f5;
 }
 
 .relax {
