--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -1,15 +1,11 @@
 body {
   background-color: #f4f4f5;
-  font-size: 1em;
-  line-height: normal;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
 
 header {
-  margin: 0 auto;
-  border: 0px solid #ffc864;
   padding: 1rem 0.5rem;
   background-color: #ffc864;
   display: grid;
@@ -50,19 +46,18 @@ li {
 main {
   width: auto;
   display: grid;
-  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
-  grid-gap: 20px;
   margin-top: 20px;
+  grid-row: auto;
 }
 
 .top_banner {
-  grid-column: 1/3;
   display: grid;
+  grid-column: 1/3;
   position: relative;
   width: auto;
   align-items: center;
   justify-items: center;
-  
+  margin-bottom: 20px;
 }
 
 .hero_image {
@@ -75,15 +70,14 @@ main {
 
 .hero_text{
   position: absolute;
-  bottom: 98px;
+  bottom: 60px;
   left: 16px;
-  color:#f5f4f4;
+  color:#f4f4f5;
   z-index: -1;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 1.25rem;
   grid-column: 1/2;
   background-color: #434656d2;
-  backdrop-filter: blur(8px);
   border: 0px;
   border-radius: 12px;
 }
@@ -91,9 +85,10 @@ main {
 button {
   width: auto;
   height: auto;
+  max-width: 70%;
   font-size: 2.5em;
   text-align: center;
-  color: #f5f4f4;
+  color: #f4f4f5;
   border: 0px;
   border-radius: 12px;
   font-family: "IM Fell English SC", serif, Impact, Haettenschweiler,
@@ -105,7 +100,82 @@ button {
   background-color: #43465681;
 }
 
+.tour_h2{
+  grid-column: 1/3;
+  align-self: self-start;
+}
+
+.tour_cards{
+  display: flex;
+  justify-content: space-between;
+  
+  margin-bottom: 20px;
+}
+
+.tour_stuff{
+  display: grid;
+  grid-template-rows: repeat(4,min-content) 1fr;
+  justify-items: center;
+  margin: 6px;
+}
+
+.tour_pic{
+  width: 310px;
+  height: 400px;
+}
+
+.tour_rectangle{
+  width: 150px;
+  height: 30px;
+  line-height: 30px;
+  background-color: #002587;
+  color: #f4f4f5;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
+  top: -15px;
+}
+
+.tour_name,.tour_teas, .read_more{
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  margin: 5px;
+  text-align: center;
+}
+
+.tour_name{
+  font-size: medium;
+}
+
+.tour_teas{
+  font-size: small;
+}
+
+.spec_tours{
+  grid-row: 4/5;
+  display: grid;
+  justify-items: center;
+}
+
+.spec_text{
+  position: relative;
+  bottom: 60px;
+  text-align: center;
+  color:#f4f4f5;
+  z-index: 2;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 1.25rem;
+  background-color: #434656d2;
+  border: 0px;
+  border-radius: 12px;
+}
+
+.spec_button{
+  margin-top: 20px;
+}
+
 h2 {
+  width: auto;
   font-size: 1.8em;
   line-height: normal;
   color: #002587;
@@ -121,8 +191,6 @@ p , .call_us , .learn_more, .address_box {
   line-height: normal;
   color: #434656;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  margin-top: 0px;
-  padding-top: 0px;
 }
 
 .contact_boxes{
@@ -138,16 +206,14 @@ p , .call_us , .learn_more, .address_box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
   border-style: solid;
   border-width: 1px;
-  border-color: #434656;
+  border-color: #002587;
   position: relative;
-  background-color: #ffc864;
-  justify-items: center;
+  background-color: #f4f4f5;
   margin-left: 25px;
   margin-right: 25px;
-  top: -110px;
+  top: -60px;
   padding: 24px 30px;
 }
 
