--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -12,7 +12,8 @@ header {
   grid-template-columns: 200px 1fr;
   justify-content: right;
   align-items: center;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif, Arial;
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
   font-size: 1.5rem;
   line-height: normal;
   color: #002587;
@@ -73,8 +74,8 @@ main {
   left: 16px;
   color:#f4f4f5;
   z-index: -1;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 1.25rem;
+  font-family: 'Open Sans', sans-serif, Arial;
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
   grid-column: 1/2;
   background-color: #434656d2;
   border: 0px;
@@ -90,9 +91,8 @@ button {
   color: #f4f4f5;
   border: 0px;
   border-radius: 12px;
-  font-family: "IM Fell English SC", serif, Impact, Haettenschweiler,
-    "Arial Narrow Bold", sans-serif;
-  
+  font-family: 'IM Fell English SC', serif, 'Arial Narrow Bold';
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
   grid-column: 1/3;
   grid-row: 1/2; 
   position: absolute;
@@ -129,7 +129,8 @@ button {
   line-height: 30px;
   background-color: #002587;
   color: #f4f4f5;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif, Arial;
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
   text-align: center;
   vertical-align: middle;
   position: relative;
@@ -137,19 +138,12 @@ button {
 }
 
 .tour_name,.tour_teas, .read_more{
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif, Arial;
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
   margin: 5px;
   text-align: center;
 }
 
-/* .tour_name{
-  font-size: x-large;
-  font-weight: bolder;
-} */
-
-/* .tour_teas{
-  font-size: small;
-} */
 
 .spec_tours{
   grid-row: 4/5;
@@ -168,7 +162,8 @@ button {
   text-align: center;
   color:#f4f4f5;
   z-index: 2;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif, Arial;
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
   font-size: 1.25rem;
   background-color: #434656d2;
   border: 0px;
@@ -185,8 +180,7 @@ h1 {
   font-size: 1.8em;
   line-height: normal;
   color: #002587;
-  font-family: "Pacifico", cursive, Impact, Haettenschweiler,
-    "Arial Narrow Bold", sans-serif;
+  font-family: 'Pacifico', cursive, 'Arial Narrow Bold';
   margin-bottom: 0px;
   padding-bottom: 0px;
   text-align: center;
@@ -195,7 +189,8 @@ h1 {
 p , .call_us , .learn_more, .address_box {
   line-height: normal;
   color: #434656;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif, Arial;
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
   margin: 1%;
   text-align: center;
 }
@@ -302,7 +297,8 @@ footer {
   display: grid;
   grid-template-columns: 200px 1fr;
   justify-content: left;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif, Arial;
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
   font-size: 1rem;
   line-height: normal;
   color: #002587;
