--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -13,7 +13,7 @@ header {
   justify-content: right;
   align-items: center;
   font-family: 'Open Sans', sans-serif, Arial;
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  
   font-size: 1.5rem;
   line-height: normal;
   color: #002587;
@@ -75,7 +75,7 @@ main {
   color:#f4f4f5;
   z-index: -1;
   font-family: 'Open Sans', sans-serif, Arial;
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
+  font-size: 1.25rem;
   grid-column: 1/2;
   background-color: #434656d2;
   border: 0px;
@@ -92,7 +92,7 @@ button {
   border: 0px;
   border-radius: 12px;
   font-family: 'IM Fell English SC', serif, 'Arial Narrow Bold';
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
+  font-size: 1.25rem;
   grid-column: 1/3;
   grid-row: 1/2; 
   position: absolute;
@@ -130,7 +130,7 @@ button {
   background-color: #002587;
   color: #f4f4f5;
   font-family: 'Open Sans', sans-serif, Arial;
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
+  font-size: 1.25rem;
   text-align: center;
   vertical-align: middle;
   position: relative;
@@ -139,7 +139,7 @@ button {
 
 .tour_name,.tour_teas, .read_more{
   font-family: 'Open Sans', sans-serif, Arial;
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
+  font-size: 1.25rem;
   margin: 5px;
   text-align: center;
 }
@@ -163,7 +163,7 @@ button {
   color:#f4f4f5;
   z-index: 2;
   font-family: 'Open Sans', sans-serif, Arial;
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
+  font-size: 1.25rem;
   font-size: 1.25rem;
   background-color: #434656d2;
   border: 0px;
@@ -190,7 +190,7 @@ p , .call_us , .learn_more, .address_box {
   line-height: normal;
   color: #434656;
   font-family: 'Open Sans', sans-serif, Arial;
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
+  font-size: 1.25rem;
   margin: 1%;
   text-align: center;
 }
@@ -298,7 +298,7 @@ footer {
   grid-template-columns: 200px 1fr;
   justify-content: left;
   font-family: 'Open Sans', sans-serif, Arial;
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;font-size: 1.25rem;
+  font-size: 1.25rem;
   font-size: 1rem;
   line-height: normal;
   color: #002587;
