--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -68,14 +68,16 @@ main {
 }
 
 .hero_text{
-  position: absolute;
+  position: relative;
+  text-align: center;
   bottom: 60px;
-  left: 16px;
+  /* left: 16px; */
   color:#f4f4f5;
   z-index: -1;
   font-family: 'Open Sans', sans-serif, Arial;
   font-size: 1.25rem;
-  grid-column: 1/2;
+  grid-column: 1/3;
+  width: 50%;
   background-color: #434656d2;
   border: 0px;
   border-radius: 12px;
@@ -135,16 +137,18 @@ button {
   top: -15px;
 }
 
-.tour_name,.tour_teas, .read_more{
+.tour_teas, .read_more{
   font-family: 'Open Sans', sans-serif, Arial;
   margin: 5px;
   text-align: center;
 }
 
-/* .tour_name{
-  font-size: x-large;
-  font-weight: bolder;
-} */
+.tour_name{
+  font-family: 'Pacifico', cursive,
+    "Arial Narrow Bold", sans-serif;
+  margin: 5px;
+  text-align: center;
+}
 
 /* .tour_teas{
   font-size: small;
