--- a/final_project/css/fp_style.css
+++ b/final_project/css/fp_style.css
@@ -1,17 +1,110 @@
 body {
   width: auto;
+  max-width: 1080px;
+  justify-content: center;
   font-size: calc(12px + 1vw);
+  background-color:#0a3036;
+  color: #a8dadc;
+  margin: 1rem;
+
+
+}
+
+.home_nav{
+  color: #a8dadc;
+  margin: 1rem;
+  text-decoration: none;
+  font-size: 0.9rem;
 }
 
 header {
   width: auto;
 }
 
-main{
-  width: 1080px;
+.head_nav {
+  display: grid;
+  grid-auto-flow: column;
 }
 
-.images {
+.gallery_nav, .profiles_nav, .care_nav {
+  text-decoration: none;
+  min-height: 100px;
+  padding: 15px;
+  margin: 1rem;
+  color: #a8dadc;
+  background-color: maroon;
+  ;
+
+}
+
+.care_nav{
+  grid-row: 1/3;
+}
+.gallery_nav, .profiles_nav {
+
+}
+
+main{
+  width: auto;
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: 80% 20%;
+  
+}
+
+.intro{
+  max-width: 80%;
+}
+
+aside{
+  float:right;
+  margin: 1rem;
+  
+  
+}
+
+.profile_row{
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  
+  
+}
+
+
+.gallery{
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+  grid-template-rows: repeat(6,1fr);
+}
+
+.gallery_big{
+  column-span: 2;
+  max-width: 200px;
+}
+
+.gallery_sma{
+  column-span: 1;
+  max-width: 100px;
+}
+
+.story{
+  border: #a8dadc;
+  font-size: 1em;
+}
+
+.bullets{
+  float:right;
+  margin: 1rem;
+  font-size: 1.2rem;
+}
+
+
+footer{
+  margin: 1rem;
+
+}
+
+/* .images {
   display: grid;
   grid-template: repeat(1, .3fr) / repeat(2, .3fr);
   
@@ -98,7 +191,7 @@ main{
 .accent2 {
   height: 40px;
   width: 40px;
-  background-color: #a8dadc;
+  background-color: #f1faee;
   border-radius: 50%;
   position: absolute;
   left: 10px;
@@ -139,4 +232,4 @@ main{
 .font3 {
   font-size: 2vw;
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
