wdd130 fp tues night

--- a/final_project/css/fp_style.css
+++ b/final_project/css/fp_style.css
@@ -3,8 +3,8 @@ body {
   max-width: 1080px;
   justify-content: center;
   font-size: calc(12px + 1vw);
-  background-color:#0a3036;
-  color: #a8dadc;
+  background-color:#a8dadc;
+  color: #0a3036;
   margin: 1rem;
 
 
@@ -47,7 +47,7 @@ header {
 main{
   width: auto;
   margin: 1rem;
-  display: flex;
+  display: grid;
 }
 
 
@@ -64,16 +64,6 @@ aside{
   margin: 0 15px 0 0;
 }
 
-.profile_row{
-  grid-column: 1/3;
-  display: grid;
-  grid-template-columns: auto auto auto;  
-  max-width: 1080px;
-}
-
-h4{
-  margin: 5px 0 0 0;
-}
 
 .gallery{
   display: grid;
@@ -101,10 +91,76 @@ h4{
 
 }
 
+.profile_row{
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: auto auto auto;  
+  max-width: 1080px;
+}
+
+h4{
+  margin: 5px 0 0 0;
+}
+
 .story{
   font-size: 1rem;
   margin: 0;
 }
+
+.container{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.shutter{
+
+}
+.collapsed{
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: 0.5rem 2px .5rem rgba(0, 0, 0, 0.795) ;
+}
+.shutter_link{
+  display: grid;
+  grid-template-columns: auto auto auto auto;  
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+.i_shutter{
+  padding: .5rem;
+}
+.i_shutter_remove{
+  display: none;
+}
+
+.hidden{
+  max-height: 0;
+  overflow: hidden;
+  position: relative;
+  background-color: bisque;
+  transition: max-height 650ms;
+}
+.hidden::before{
+  content:"";
+  position: absolute;
+  width: 0.6rem;
+  height: 90%;
+  background-color: greenyellow;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.collapsed:target .shutter_link{
+  max-height: 20rem;
+}
+
+
+
 
 ul .story{
   list-style-type: circle;
