--- a/final_project/css/fp_style.css
+++ b/final_project/css/fp_style.css
@@ -21,7 +21,7 @@ header {
   padding: 1rem;
   position: fixed;
   top: 0;
-  background-color: rgb(241, 241, 250);
+  background-color: rgb(218, 218, 240);
   box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.301);
   width: inherit;
   z-index: 1;
@@ -30,8 +30,9 @@ header {
 .home_nav, .gallery_nav, .profiles_nav, .care_nav {
   text-decoration: none;
   padding: 1rem;
-  color: #a8dadc;
-  background-color: #0e0a36;
+  color: #001524;
+  background-color: #ff7d00;
+  font-weight: bolder
   ;
 }
 .home_nav{
@@ -48,13 +49,14 @@ header {
 main{
   width: inherit;
   background-color: rgb(218, 218, 240);
-  margin: 300px 0; /*this controls the top distance from the nav section*/
+  margin: 300px 0 0 0; /*this controls the top distance from the nav section*/
   display: grid;
   grid-template-columns: repeat(4,1fr);
   gap: 1rem;
   padding: 1rem;
-  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.301);
+  box-shadow: -10px 10px 10px rgba(245, 208, 208, 0.301);
 }
+
 .intro{
   grid-column: 1/4;
 }
@@ -62,11 +64,9 @@ h1{
   margin: 0.5rem 0 0.5rem 0;
   font-size: 3rem;
 }
-.li_home{
+.li_home, .li_home a{
   font-size: 1.6rem;
-}
-.safety_stuff{
-  margin: 0 15px 0 0;
+  color: #b61421;
 }
 .gallery{
   width: inherit;
@@ -146,25 +146,52 @@ h4{
   font-size: 1.6rem;
   padding: .2rem 2rem 1rem .2rem;
   margin: .2rem;
+  /* filter: contrast(200%); */
 }
 .ul_bullets{
   list-style-type: circle;
   padding: .2rem .2rem 1rem .2rem;
   margin: .2rem;
   font-size: 1.2rem;
-  color: #e63946;
+  color: #b61421;
 }
-.safety_stuff:link{
-  background-color: #e63946;
+.safety_stuff{
+  margin: 1rem .2rem 0 0;
+  font-size: 1.4rem;
+}
+.safety_stuff a{
+  color: #b61421;
 }
 .sharpening{
   grid-column: 1/3;
+  padding: 0 1.2rem;
+  border-right: 5px solid #b61421;
 }
+.h2_safe,.h3_safe,.ul_safe{
+  margin: 1rem auto auto auto;
+  padding: 0.2rem;
+}
+.h3_safe{
+  font-size: 1.6rem;
+}
+.ul_safe{
+  list-style-type: circle;
+}
+
+.li_safe{
+  font-size: 1.2rem;
+  padding: 0.2rem;
+  margin-left: 2rem;
+}
+
 .knifecare{
   grid-column: 3/5;
+  padding: 0 1.2rem;
+  /* border-left: 5px solid #b61421; */
 }
 footer{
   margin: 1rem;
+
 }
 legend{
   font-size: 1.4rem;
@@ -195,7 +222,7 @@ color: lightgray;
 }
 input:focus,
 textarea:focus {
-background-color: #e6394638;
+background-color: rgb(218, 218, 240);
 color: #0e0a36;
 }
 textarea {
@@ -224,4 +251,8 @@ button {
   font-size: large;
   text-transform: capitalize;
   justify-self: center;
+  transition-duration: 350ms;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
 }
