--- a/final_project/css/fp_siteplan_style.css
+++ b/final_project/css/fp_siteplan_style.css
@@ -1,6 +1,6 @@
 body {
     
-    color:  rgb(191, 191, 212);
+    color:  #001524;
     
   }
 
@@ -25,7 +25,7 @@ main{
 .color3{color: #ff7d00}
 .color4{color:#78290f}
 .accent1{color:#b61421}/*#e63946*/
-.accent2{color:#001524}
+.accent2{color:rgb(191, 191, 212)}
 .accent3{color:#5f0f40}
 .bkgrnd{color:rgb(218, 218, 240); background-color: lightgray;}
 
