--- a/final_project/css/fp_style.css
+++ b/final_project/css/fp_style.css
@@ -4,57 +4,78 @@ body {
   /*font-size: calc(12px + 1vw); */
   background-color: rgb(191, 191, 212);
   color: #0e0a36;
-  margin: 1rem;
+  margin: 1rem 0;
+  padding: 0;
   /* width: 1080px; */
-  width: 80vw; /*ok*/
+  width: 100%; /*ok*/
+  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.301);
+  
 }
 header {
-  width: inherit;
+
 }
 .head_nav {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: repeat(3,1fr);
+  grid-template-rows: repeat(2,1fr);
   gap: 1rem;
   padding: 1rem;
+  margin: 0;
   position: fixed;
   top: 0;
   background-color: rgb(218, 218, 240);
-  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.301);
-  width: inherit;
+  /* box-shadow: -10px 0 10px rgba(0, 0, 0, 0.301); */
+  width: 95vw;
   z-index: 1;
 }
 .home_nav, .gallery_nav, .profiles_nav, .care_nav {
   text-decoration: none;
   padding: 1rem;
-  color: #001524;
-  background-color: #ff7d00;
-  font-weight: bolder
-  ;
+  color: white;
+  font-weight: bolder;
+  background-color: #b95b02;
+  background-blend-mode: hard-light;
+  background-size: cover;
+  font: 0.9em Open Sans;
 }
 .home_nav{
   grid-column: 1/5;
   grid-row: 1/2;
+  background-image: url(/final_project/fp_images/machete_144547.png);
+  background-position: center;
 }
 .gallery_nav, .care_nav{
-  grid-row: 2/4;
+  grid-row: 2/3;
 }
+.gallery_nav{
+  background-image: url(/final_project/fp_images/swisspioneer_145503.png);
+  background-position: right 15% top 60%;
+}
+.profiles_nav{
+  background-image: url(/final_project/fp_images/latestpurchase_151058.png);
+  background-position: center;
+}
+.care_nav{
+  background-image: url(/final_project/fp_images/hunterrefurbished_150801.png);
+  background-position: center;
+}
+.sharpening
 .profiles_nav {
   grid-column: 2/3;
-  grid-row: 2/4;
+  grid-row: 2/3;
 }
 .care_nav{
   grid-column: 3/5;
 }
 main{
-  width: inherit;
+  width: 95vw;
   background-color: rgb(218, 218, 240);
-  margin: 300px 0 0 0; /*this controls the top distance from the nav section*/
+  padding: 3rem 1rem;
+  margin: 160px 0 0.5rem 0; /*this controls the top distance from the nav section*/
   display: grid;
   grid-template-columns: repeat(4,1fr);
   gap: 1rem;
-  padding: 1rem;
-  box-shadow: -10px 10px 10px rgba(245, 208, 208, 0.301);
+  /* box-shadow: -10px 0 10px rgba(245, 208, 208, 0.301); */
 }
 
 .intro{
@@ -64,9 +85,19 @@ h1{
   margin: 0.5rem 0 0.5rem 0;
   font-size: 3rem;
 }
+.li_home{
+  margin: 0 0 0 2rem;
+}
 .li_home, .li_home a{
+  list-style-type: circle;
+  list-style-position: inside;
+  padding: .2rem .2rem .2rem 0;
+  /* margin: 0 2rem; */
   font-size: 1.6rem;
   color: #b61421;
+}
+li.li_home::marker{
+  padding-left: 2rem;
 }
 .gallery{
   width: inherit;
@@ -76,17 +107,18 @@ h1{
   grid-column: 1/5;
   justify-items: center;
   align-items: center;
+  /* padding: 3rem 0; */
 }
 .gal {
   margin: 3px 3px 3px 3px;
-  
+  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.301);
+  background-color: white;
 }
 .gal img{
-  max-width: 20vw;
+  /* max-width: 20vw; */
   padding: 0.5rem 0.5rem 0 0.5rem;
   /* margin: 1rem; */
   background-color: white;
-  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.301);
   z-index: -1;
 }
 .gal:hover{
@@ -108,10 +140,10 @@ h1{
   text-decoration: none;
   color: #0e0a36;
   padding: 0.5rem;
-  max-width: 20vw;
-  display: -webkit-box;
+  /* max-width: 20vw; */
   overflow: hidden;
-  -webkit-line-clamp: 2;
+  /* display: -webkit-box;
+  -webkit-line-clamp: 2; */
 }
 .profile_row a{position:absolute; top: -18rem;}
 .profile_row{
@@ -144,6 +176,7 @@ h4{
 .profile_bullets{
   padding: .2rem .2rem 1rem .2rem;
   margin: 1rem;
+  justify-self: left;
 }
 .story{
   font-size: 1.6rem;
@@ -167,7 +200,6 @@ h4{
 }
 .sharpening{
   grid-column: 1/3;
-  padding: 0 1.2rem;
   border-right: 5px solid #b61421;
 }
 .h2_safe,.h3_safe,.ul_safe{
@@ -186,22 +218,31 @@ h4{
   padding: 0.2rem;
   margin-left: 2rem;
 }
-
+.sharpening, .knifecare{
+  padding: 0 1.2rem;
+  margin-bottom: 3rem;
+}
 .knifecare{
   grid-column: 3/5;
-  padding: 0 1.2rem;
   /* border-left: 5px solid #b61421; */
 }
 footer{
-  margin: 1rem;
-
+  margin: 1rem 0;
+  width: 95vw;
+  padding: 1rem;
+  margin: 0.5rem 0;
 }
 legend{
-  font-size: 1.4rem;
+  /* font-size: 1.4rem; */
+}
+fieldset{
+  border: solid;
+  border-color: #b61421;
 }
 form{
   grid-column: 1/5;
   justify-content: center;
+  margin-bottom: 3rem;
 }
 .form_list{
   list-style: none;
