--- a/final_project/css/fp_style.css
+++ b/final_project/css/fp_style.css
@@ -1,9 +1,8 @@
 body {
   justify-content: center;
-  font-size: 2em; /*I want 2em. */
-  /*font-size: calc(12px + 1vw); */
-  background-color: rgb(191, 191, 212);
-  color: #0e0a36;
+  font-size: 3em; /*I want 2em. */
+  background-color: #011936;
+  color: #c2eabd;
   margin: 1rem 0;
   padding: 0;
   /* width: 1080px; */
@@ -23,20 +22,23 @@ header {
   margin: 0;
   position: fixed;
   top: 0;
-  background-color: rgb(218, 218, 240);
+  background-color: #011936;
   /* box-shadow: -10px 0 10px rgba(0, 0, 0, 0.301); */
   width: 95vw;
   z-index: 1;
 }
 .home_nav, .gallery_nav, .profiles_nav, .care_nav {
   text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   padding: 1rem;
   color: white;
-  font-weight: bolder;
-  background-color: #b95b02;
+  font: 2em Open Sans;
+  text-shadow: 3px 3px 6px #000000;
+  background-color: #ff8600;
   background-blend-mode: hard-light;
   background-size: cover;
-  font: 0.9em Open Sans;
 }
 .home_nav{
   grid-column: 1/5;
@@ -69,9 +71,9 @@ header {
 }
 main{
   width: 95vw;
-  background-color: rgb(218, 218, 240);
+  background-color: #011936;
   padding: 3rem 1rem;
-  margin: 160px 0 0.5rem 0; /*this controls the top distance from the nav section*/
+  margin: 360px 0 0.5rem 0; /*this controls the top distance from the nav section*/
   display: grid;
   grid-template-columns: repeat(4,1fr);
   gap: 1rem;
@@ -83,7 +85,8 @@ main{
 }
 h1{
   margin: 0.5rem 0 0.5rem 0;
-  font: 3rem Open Sans;
+  font: 3.6rem Open Sans;
+  color: #ff8600;
 }
 .li_home{
   margin: 0 0 0 2rem;
@@ -94,8 +97,8 @@ h1{
   text-indent: -2rem;
   padding: .2rem .2rem .2rem 0;
   /* margin: 0 2rem; */
-  font-size: 1.6rem;
-  color: #b61421;
+  font-size: 2rem;
+  color: #c2eabd;
 }
 li.li_home::marker{
   padding-left: 2rem;
@@ -139,12 +142,9 @@ li.li_home::marker{
   top: -1.6rem;
   font: 32px Pacifico;
   text-decoration: none;
-  color: #0e0a36;
+  color: #0a0188;
   padding: 0.5rem;
-  /* max-width: 20vw; */
   overflow: hidden;
-  /* display: -webkit-box;
-  -webkit-line-clamp: 2; */
 }
 .profile_row a{position:absolute; top: -18rem;}
 .profile_row{
@@ -167,12 +167,12 @@ li.li_home::marker{
   padding: .2rem .2rem 1rem .2rem;
   margin: 1rem;
   grid-column: 2/4;
-  /* font-size: x-small; */
   position: relative;
 }  
 h4{
   margin: .2rem;
-  font: 3rem Open Sans;
+  font: 3.6rem Open Sans;
+  color: #ff8600;
 }
 .profile_bullets{
   padding: .2rem .2rem 1rem .2rem;
@@ -180,7 +180,7 @@ h4{
   justify-self: left;
 }
 .story{
-  font-size: 1.6rem;
+  font-size: 2rem;
   padding: .2rem 2rem 1rem .2rem;
   margin: .2rem;
   /* filter: contrast(200%); */
@@ -189,36 +189,38 @@ h4{
   list-style-type: circle;
   padding: .2rem .2rem 1rem .2rem;
   margin: .2rem;
-  font-size: 1.2rem;
-  color: #b61421;
+  font-size: 2rem;
+  color: #c2eabd;
 }
 .safety_stuff{
   margin: 1rem .2rem 0 0;
-  font-size: 1.4rem;
+  font-size: 2rem;
 }
 .safety_stuff a{
-  color: #b61421;
+  color: #ff8600;
 }
 .sharpening{
   grid-column: 1/3;
-  border-right: 5px solid #b61421;
+  border-right: 5px solid #ff8600;
 }
 .h2_safe,.h3_safe,.ul_safe{
   margin: 1rem auto auto auto;
   padding: 0.2rem;
 }
 .h2_safe{
-  font: 3rem Open Sans;
+  font: 3.6rem Open Sans;
+  color: #ff8600;
 }
 .h3_safe{
-  font: 2rem Open Sans;
+  font: 2.8rem Open Sans;
+  color: #ff8600;
 }
 .ul_safe{
   list-style-type: circle;
 }
 
 .li_safe{
-  font-size: 1.2rem;
+  font-size: 2rem;
   padding: 0.2rem;
   margin-left: 2rem;
 }
@@ -228,7 +230,7 @@ h4{
 }
 .knifecare{
   grid-column: 3/5;
-  /* border-left: 5px solid #b61421; */
+  /* border-left: 5px solid #ff8600; */
 }
 footer{
   margin: 1rem 0;
@@ -237,11 +239,11 @@ footer{
   margin: 0.5rem 0;
 }
 legend{
-  /* font-size: 1.4rem; */
+
 }
 fieldset{
   border: solid;
-  border-color: #b61421;
+  border-color: #ff8600;
 }
 form{
   grid-column: 1/5;
@@ -255,7 +257,7 @@ form{
 label {
 display: inline-block;
 width: 20%;
-font-size: 1.4rem;
+font-size: 2rem;
 text-align: right;
 padding: 1em 0.5em ;
 }
@@ -263,15 +265,15 @@ input,
 textarea {
 width: 55%;
 box-sizing: border-box;
-border: 1px solid #999;
-font: 1.4rem Open Sans;
+border: 1px solid #ff8600;
+font: 2rem Open Sans;
 padding: 0.3em;
 color: lightgray;
 }
 input:focus,
 textarea:focus {
-background-color: rgb(218, 218, 240);
-color: #0e0a36;
+background-color: #f1f7f0;
+color: #c2eabd;
 }
 textarea {
 vertical-align: top;
@@ -289,14 +291,10 @@ form li + li {
   display: grid;
   align-items: center;
 }
-/* .submit{
-  justify-self: center;
-  align-items: center;
-} */
 button {
   padding: 1em;
   width: 40%;
-  font-size: large;
+  font-size: 0.8em;
   text-transform: capitalize;
   justify-self: center;
   transition-duration: 350ms;
